<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_home"
          android:icon="@drawable/ic_home"
          android:title="@string/navigation_home"
          app:showAsAction="always"/>
    <item android:id="@+id/action_search"
          android:icon="@drawable/ic_search"
          android:title="@string/navigation_search"
          app:showAsAction="always"/>
    <item android:id="@+id/camera"
          android:icon="@drawable/ic_add_square_button"
          android:title="@string/navigation_camera"
          app:showAsAction="always"/>
    <item android:id="@+id/action_notification"
          android:icon="@drawable/ic_notification"
          android:title="@string/navigation_notification"
          app:showAsAction="always"/>
    <item android:id="@+id/action_profile"
          android:icon="@drawable/ic_profile"
          android:title="@string/navigation_profile"
          app:showAsAction="always"/>
</menu>