<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#ffffffff">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_gift_dialog_confirm_delete_title"
            android:id="@+id/text_dialog"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"/>

    <TextView
            android:id="@+id/text_dialog_sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_gift_dialog_confirm_delete_subtitle"
            android:layout_below="@+id/text_dialog"
            android:layout_marginBottom="20dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/darker_gray"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"/>
    <LinearLayout
            android:id="@+id/dialog_error_container_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_dialog_sub_title"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-6dp">
        <Button
                android:id="@+id/btn_dialog_yes"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/edit_gift_dialog_yes_button"
                android:gravity="center"
                android:layout_gravity="end"
                android:layout_marginBottom="20dp"
                style="@style/ButtonRoundGrey"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/edit_gift_dialog_no_button"
                android:id="@+id/btn_dialog_no"
                android:gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                style="@style/ButtonRoundGrey"/>
    </LinearLayout>
</RelativeLayout>