<?xml version="1.0" encoding="utf-8"?>

<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.ziggy.kdo.utils.ConverterDate"/>
        <variable name="registerViewModel"
                  type="com.ziggy.kdo.ui.activity.register.RegisterViewModel"/>

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.fragment.register.RegisterPartOneFragment"
            android:padding="20dp">

        <EditText
                android:id="@+id/register_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toTopOf="parent"
                android:hint="@string/register_editext_firstname"
                android:text="@={registerViewModel.MUserRegister.firstname}"
                style="@style/Editext"/>


        <EditText
                android:id="@+id/register_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/register_firstname"
                android:hint="@string/register_editext_lastname"
                android:text="@={registerViewModel.MUserRegister.lastname}"
                style="@style/Editext"/>

        <RadioGroup
                android:id="@+id/register_content_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/register_lastname"
                android:orientation="horizontal"
        >
            <RadioButton
                    android:id="@+id/regiser_man"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:layout_constraintTop_toBottomOf="@+id/register_lastname"
                    app:layout_constraintEnd_toStartOf="@+id/register_woman"
                    app:layout_constraintStart_toStartOf="parent"
                    android:hint="@string/register_editext_gender_man"
                    android:onClick="@{() -> registerViewModel.setGender(1)}"
                    style="@style/RadioButtonGreen"/>

            <RadioButton
                    android:id="@+id/register_woman"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:layout_constraintTop_toBottomOf="@+id/register_lastname"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:hint="@string/register_editext_gender_women"
                    android:onClick="@{() -> registerViewModel.setGender(2)}"
                    style="@style/RadioButtonGreen"/>
        </RadioGroup>

        <EditText
                android:id="@+id/register_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_editext_birthday"
                android:layout_marginTop="20dp"
                android:focusable="false"
                android:inputType="none"
                android:text="@{ConverterDate.DateToString(registerViewModel.MUserRegister.birthday)}"
                app:layout_constraintTop_toBottomOf="@+id/register_content_radio_button"
                style="@style/Editext"/>

        <Button
                android:id="@+id/button_proceed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_button_part_one"
                android:textAllCaps="true"
                android:onClick="@{() -> registerViewModel.toProceed()}"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_birthday"
                style="@style/ButtonRoundGrey"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>