<?xml version="1.0" encoding="utf-8"?>

<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable name="loginViewModel"
                  type="com.ziggy.kdo.ui.activity.login.LoginViewModel"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.activity.login.LoginActivity"
            android:padding="20dp">

        <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:drawableStart="@drawable/ic_login_mail_unselected"
                android:drawableTint="@color/colorPrimary"
                android:drawablePadding="10dp"
                android:hint="@string/login_edittext_mail"
                android:inputType="textEmailAddress"
                android:backgroundTint="@color/colorPrimary"
                android:text="@={loginViewModel.MUserLogin.email}"
                app:layout_constraintTop_toTopOf="parent"/>

        <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/login_email"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/ic_login_password_unselected"
                android:drawableTint="@color/colorPrimary"
                android:drawablePadding="10dp"
                android:hint="@string/login_edittext_password"
                android:backgroundTint="@color/colorPrimary"
                android:inputType="textPassword"
                android:text="@={loginViewModel.MUserLogin.password}"/>

        <Button
                android:id="@+id/login_button_connexion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/login_password"
                android:layout_marginTop="30dp"
                android:text="@string/login_button_signin"
                android:onClick="@{() -> loginViewModel.login(loginViewModel.MUserLogin)}"
                style="@style/ButtonRoundWhite"/>

        <TextView
                android:id="@+id/login_password_lost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_textview_lost_password"
                android:layout_margin="15dp"
                app:layout_constraintTop_toBottomOf="@+id/login_button_connexion"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textStyle="bold"/>

        <TextView
                android:id="@+id/login_text_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_textview_signup"
                android:layout_margin="15dp"
                app:layout_constraintTop_toBottomOf="@+id/login_button_connexion"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textStyle="bold"
                android:onClick="toRegister"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>