<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <import type="com.ziggy.kdo.utils.ConverterDate"/>
        <variable name="childViewModel"
                  type="com.ziggy.kdo.ui.fragment.children.ChildViewModel"/>

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.fragment.children.AddChildFragment">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/layout_padding_general"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/add_gift_image">

            <EditText
                    android:id="@+id/add_gift_edittext_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_gift"
                    android:hint="@string/add_gift_description"
                    android:text="@={childViewModel.MChild.lastname}"
                    style="@style/EditextDescription"/>

            <EditText
                    android:id="@+id/add_gift_edittext_place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/add_gift_edittext_description"
                    android:drawableStart="@drawable/ic_localization"
                    android:hint="@string/add_gift_localization"
                    android:text="@={childViewModel.MChild.firstname}"
                    style="@style/EditextDescription"/>

            <Spinner
                    android:id="@+id/add_gift_edittext_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/add_gift_edittext_description"
                    android:drawableStart="@drawable/ic_tag"
                    android:hint="@string/add_gift_price"
                    android:text="@={childViewModel.MChild.firstname}"
                    style="@style/EditextDescription"/>

            <EditText
                    android:id="@+id/add_gift_edittext_website"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/add_gift_edittext_description"
                    android:drawableStart="@drawable/ic_global"
                    android:hint="@string/add_gift_website"
                    android:text="@={childViewModel.MChild.firstname}"
                    style="@style/EditextDescription"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_marginBottom="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@drawable/drawable_shadow_top_more">

            <Button
                    android:id="@+id/add_gift_button_validate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_gift_button_add"
                    style="@style/ButtonRoundWhite"
                   />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>