<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View"/>
        <import type="com.ziggy.kdo.utils.ConverterDate"/>
        <variable name="profileViewModel"
                  type="com.ziggy.kdo.ui.fragment.profile.ProfileViewModel"/>

    </data>
    <ScrollView
            android:id="@+id/reservation_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:context=".ui.fragment.profile.detail.MyReservationDetailFragment">

            <ImageView
                    android:id="@+id/my_reservation_image"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintHeight_percent="0.5"
                    android:transitionName="image_cadeau"
                    android:background="@android:color/black"
                    android:adjustViewBounds="true"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/layout_padding_general"
                    android:orientation="vertical"
                    android:background="@color/colorWhite"
                    app:layout_constraintTop_toBottomOf="@+id/my_reservation_image">
                <TextView
                        android:id="@+id/reservation_title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/edit_reservation_title_description"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="parent"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:textSize="26sp"/>

                <TextView
                        android:id="@+id/add_gift_edittext_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_gift"
                        android:hint="@string/add_gift_description"
                        android:layout_marginTop="30dp"
                        android:text="@{profileViewModel.MGift.description}"
                        app:layout_constraintTop_toBottomOf="@id/reservation_title"
                        style="@style/TextViewReservation"/>
                <TextView
                        android:id="@+id/add_gift_edittext_place"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        app:layout_constraintTop_toBottomOf="@+id/add_gift_edittext_description"
                        android:drawableStart="@drawable/ic_localization"
                        android:hint="@string/add_gift_localization"
                        android:text="@{profileViewModel.MGift.place}"
                        style="@style/TextViewReservation"/>

                <TextView
                        android:id="@+id/add_gift_edittext_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        app:layout_constraintTop_toBottomOf="@+id/add_gift_edittext_place"
                        android:drawableStart="@drawable/ic_tag"
                        android:hint="@string/add_gift_price"
                        android:text="@{ConverterDate.doubleToString(profileViewModel.MGift.price)}"
                        style="@style/TextViewReservation"/>


                <TextView
                        android:id="@+id/add_gift_edittext_website"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_global"
                        android:hint="@string/add_gift_website"
                        android:text="@{profileViewModel.MGift.website}"
                        android:layout_marginTop="20dp"
                        app:layout_constraintTop_toBottomOf="@+id/add_gift_edittext_price"
                        style="@style/TextViewReservation"/>

                <TextView
                        android:id="@+id/reservation_children"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_baby_form"
                        android:hint="@string/add_gift_child"
                        android:text="@{profileViewModel.MGift.website}"
                        android:layout_marginTop="20dp"
                        app:layout_constraintTop_toBottomOf="@+id/add_gift_edittext_website"
                        style="@style/TextViewReservation"/>

                <TextView
                        android:id="@+id/reservation_event"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_event_form"
                        android:hint="@string/add_gift_event"
                        android:text="@{profileViewModel.MGift.website}"
                        android:layout_marginTop="20dp"
                        app:layout_constraintTop_toBottomOf="@+id/reservation_children"
                        style="@style/TextViewReservation"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>

