<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.ziggy.kdo.utils.ConverterDate" />

        <variable
                name="profilViewModel"
                type="com.ziggy.kdo.ui.fragment.profile.ProfileViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            tools:context=".ui.fragment.settings.edit_profile.EditProfilFragment">

        <EditText
                android:id="@+id/register_firstname"
                style="@style/Editext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_editext_firstname"
                android:text="@={profilViewModel.mUser.firstname}"
                android:onTextChanged="@{profilViewModel.onTextChanged}"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="20dp" />


        <EditText
                android:id="@+id/register_lastname"
                style="@style/Editext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/register_editext_lastname"
                android:text="@={profilViewModel.mUser.lastname}"
                android:onTextChanged="@{profilViewModel.onTextChanged}"
                app:layout_constraintTop_toBottomOf="@+id/register_firstname" />


        <EditText
                android:id="@+id/register_birthday"
                style="@style/Editext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:focusable="false"
                android:hint="@string/register_editext_birthday"
                android:inputType="none"
                android:text="@{ConverterDate.DateToString(profilViewModel.mUser.birthday)}"
                android:onTextChanged="@{profilViewModel.onTextChanged}"
                app:layout_constraintTop_toBottomOf="@+id/register_lastname" />

        <Button
                android:id="@+id/button_proceed"
                style="@style/ButtonRoundGrey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="8dp"
                android:onClick="@{() -> profilViewModel.formIsValid() }"
                android:text="@string/register_button_part_one"
                android:textAllCaps="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_birthday" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>